--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,7 +7,7 @@
     <header style="background-color: #FF0000; height: 70px; wigth: 100%;">
     </header>
     <footer style="background-color: #00FF00; height: 60px; width: 100%;
-		   position: fixed; botton: 0; display: flex;
+		   position: fixed; bottom: 0; display: flex;
 		   justify-content: center; align-items: center;">
       <p style="margin: 0; front-weight: bold; color: white;">Best School</p>
     </footer>
