--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -17,14 +17,14 @@
 	  height: 60px;
 	  width: 100%;
 	  position: fixed;
-	  botton: 0;
+	  bottom: 0;
 	  display: flex;
 	  justify-content: center;
 	  align-items: center;
       }
       p {
 	  margin: 0;
-	  front-height: bold;
+	  font-weight: bold;
 	  color: white;
       }
     </style>
